--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             ><span class="logo-blue">Web</span>Studio</a
           >
           <ul class="header-menu-list header-list list">
-            <li class="header-item">
+            <li class="header-item current-page">
               <a class="header-link link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
@@ -68,7 +68,7 @@
       <section class="section section-hero">
         <div class="container hero">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button button" type="button">
+          <button class="hero-button button" data-modal-open type="button">
             Замовити послугу
           </button>
         </div>
@@ -155,8 +155,9 @@
                   class="works-image"
                   src="./images/box1.jpg"
                   width="370"
-                  alt="Розробка сайтів"
+                  alt="Десктопні додатки"
                 />
+                <p class="works-description">Десктопні додатки</p>
               </a>
             </li>
             <li class="works-item">
@@ -167,6 +168,7 @@
                   width="370"
                   alt="UI рішення"
                 />
+                <p class="works-description">Мобільні додатки</p>
               </a>
             </li>
             <li class="works-item">
@@ -177,6 +179,7 @@
                   width="370"
                   alt="Дизайнерські послуги"
                 />
+                <p class="works-description">Дизайнерські рішення</p>
               </a>
             </li>
           </ul>
@@ -496,5 +499,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="btn-close button" data-modal-close>
+          <svg class="icon-close-modal" width="18" height="18">
+            <use href="./images/icons.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
