--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <li class="header-item">
               <a class="header-link link" href="./index.html">Студія</a>
             </li>
-            <li class="header-item">
+            <li class="header-item current-page">
               <a class="header-link link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-item">
@@ -98,13 +98,20 @@
             <ul class="projects-list list">
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project1.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 1"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project1.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 1"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Технокряк</h2>
                     <p class="projects-text">Веб-сайт</p>
@@ -113,13 +120,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project2.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 2"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project2.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 2"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">
                       Постер New Orlean vs Golden Star
@@ -130,13 +144,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project3.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 3"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project3.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 3"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Ресторан Seafood</h2>
                     <p class="projects-text">Додаток</p>
@@ -145,13 +166,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project4.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 4"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project4.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 4"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Проєкт Prime</h2>
                     <p class="projects-text">Маркетинг</p>
@@ -160,13 +188,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project5.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 5"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project5.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 5"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Проєкт Boxes</h2>
                     <p class="projects-text">Додаток</p>
@@ -175,13 +210,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project6.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 6"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project6.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 6"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Inspiration has no Borders</h2>
                     <p class="projects-text">Веб-сайт</p>
@@ -190,13 +232,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project7.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 7"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project7.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 7"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Видання Limited Edition</h2>
                     <p class="projects-text">Дизайн</p>
@@ -205,13 +254,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project8.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 8"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project8.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 8"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Проєкт LAB</h2>
                     <p class="projects-text">Маркетинг</p>
@@ -220,13 +276,20 @@
               </li>
               <li class="projects-item">
                 <div class="project-card">
-                  <img
-                    class="projects-image"
-                    src="./images/project9.jpg"
-                    width="370"
-                    height="294"
-                    alt="photo project 9"
-                  />
+                  <div class="projects-image">
+                    <img
+                      src="./images/project9.jpg"
+                      width="370"
+                      height="294"
+                      alt="photo project 9"
+                    />
+                    <p class="project-text-hover">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                   <div class="projects-description">
                     <h2 class="projects-name">Growing Business</h2>
                     <p class="projects-text">Додаток</p>
